--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,6 @@
     "description": "Feedwordpress",
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.3.2",
+        "php": ">=5.3.2"
     }
 }
